added specific heat data, store using ROOT

--- a/MODULO 1/ising/ParallelMetropolis/Makefile
+++ b/MODULO 1/ising/ParallelMetropolis/Makefile
@@ -1,8 +1,8 @@
 IsingSim: IsingSim.o
-	nvcc -ccbin g++ -gencode arch=compute_50,code=sm_50 -o $@ $^
+	nvcc -ccbin g++ --compiler-options -L/home/mario/Software/root/lib -lGui -lCore -lImt -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lROOTVecOps -lTree -lTreePlayer -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -lMultiProc -lROOTDataFrame -lm -ldl -I/home/mario/Software/root/include -gencode arch=compute_50,code=sm_50 -o $@ $^
 
 IsingSim.o: IsingSim.cu
-	nvcc -ccbin g++ --std=c++20 -gencode arch=compute_50,code=sm_50 -o $@ -dc $^
+	nvcc -ccbin g++ --compiler-options -L/home/mario/Software/root/lib -lGui -lCore -lImt -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lROOTVecOps -lTree -lTreePlayer -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -lMultiProc -lROOTDataFrame -lm -ldl -I/home/mario/Software/root/include -gencode arch=compute_50,code=sm_50 -o $@ -dc $^
 
 clean:
 	rm -f IsingSim IsingSim.o
