batched simulation, concurrent kernel execution and copy to disk

--- a/MODULO 1/ising/ParallelMetropolis/Makefile
+++ b/MODULO 1/ising/ParallelMetropolis/Makefile
@@ -1,10 +1,10 @@
-IsingSim: IsingSim.o
-	nvcc -ccbin g++ --compiler-options -L/home/mario/Software/root/lib -lGui -lCore -lImt -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lROOTVecOps -lTree -lTreePlayer -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -lMultiProc -lROOTDataFrame -lm -ldl -I/home/mario/Software/root/include -gencode arch=compute_50,code=sm_50 -o $@ $^
+objects = IsingMethods.o IsingSim.o
 
-IsingSim.o: IsingSim.cu
-	nvcc -ccbin g++ --compiler-options -L/home/mario/Software/root/lib -lGui -lCore -lImt -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lROOTVecOps -lTree -lTreePlayer -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -lMultiProc -lROOTDataFrame -lm -ldl -I/home/mario/Software/root/include -gencode arch=compute_50,code=sm_50 -o $@ -dc $^
+all : $(objects)
+	nvcc -ccbin g++ --compiler-options -L/home/mario/Software/root/lib -lGui -lCore -lImt -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lROOTVecOps -lTree -lTreePlayer -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -lMultiProc -lROOTDataFrame -lm -ldl -I/home/mario/Software/root/include -gencode arch=compute_50,code=sm_50 $(objects) -o IsingSim
+
+%.o: %.cu
+	nvcc -ccbin g++ --compiler-options -L/home/mario/Software/root/lib -lGui -lCore -lImt -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lROOTVecOps -lTree -lTreePlayer -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -lMultiProc -lROOTDataFrame -lm -ldl -I/home/mario/Software/root/include -I. -gencode arch=compute_50,code=sm_50 -dc $< -o $@
 
 clean:
-	rm -f IsingSim IsingSim.o
-
-clobber: clean
+	rm -f *o IsingSim
